--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
+<div class="corpo">
   <div>
     <header>
       <h1>TODO List</h1>
@@ -25,8 +25,8 @@
         <label>Descrição da tarefa</label>
         <textarea name="description"></textarea>
       </div>
-      <button type="submit">Create</button>
-      <button type="reset">Reset</button>
+      <button class='createBtn' type="submit">Create</button>
+      <button class='resetBtn'type="reset">Clear</button>
       
       
     </form>
@@ -38,7 +38,7 @@
       <ul id="task-list"></ul>
     </section>
   </div>
-  
+</div>
   <script src='./js/script.js'></script>
 </body>
 </html>
