--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <textarea name="description"></textarea>
       </div>
       <button class='createBtn' type="submit">Create</button>
-      <button class='resetBtn'type="reset">Clear</button>
-      
+      <button class='resetBtn' type="reset">Reset</button>     
       
     </form>
   </div>
